how to css certifiate added index.html

--- a/index.html
+++ b/index.html
@@ -363,6 +363,16 @@
 					            </div>
 					         </article>
 
+						<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-2">
+					                  <i class="icon-pen2"></i>
+					               </div>
+					               <div class="timeline-label">
+					               	<h2><a href="https://codekaro.in/course-certificate/d20425de20ce4f536">How To CSS</a></div>
+					            </div>
+					         </article>
+						 
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-3">
