--- a/index.html
+++ b/index.html
@@ -366,10 +366,10 @@
 						<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-2">
-					                  <i class="icon-pen2"></i>
+					                  <i class="icon-pen3"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="https://codekaro.in/course-certificate/d20425de20ce4f536">How To CSS</a></div>
+					               	<h2><a href="https://codekaro.in/course-certificate/d20425de20ce4f536">How To CSS Bootcamp</a></div>
 					            </div>
 					         </article>
 						 
