ibm certificate added.html

--- a/index.html
+++ b/index.html
@@ -365,11 +365,21 @@
 
 						<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-2">
-					                  <i class="icon-pen3"></i>
+					               <div class="timeline-icon color-5">
+					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
 					               	<h2><a href="https://codekaro.in/course-certificate/d20425de20ce4f536">How To CSS Bootcamp</a></div>
+					            </div>
+					         </article>
+
+						<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-5">
+					                  <i class="icon-pen2"></i>
+					               </div>
+					               <div class="timeline-label">
+					               	<h2><a href="images/ibm.pdf">IBM SkillBuild Internship</a></div>
 					            </div>
 					         </article>
 						 
