--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p>I'm a dedicated developer driven by passion and a thirst for innovation. I specialize in crafting efficient, user-friendly solutions that elevate user experiences. With a solid background in [mention specific languages or technologies], I love transforming ideas into reality through clean, scalable code.</p></div>
+										<p>Highly motivated Full Stack Web Developer pursuing a Master’s in Computer Science with a strong
+foundation in Computer Science. Proven ability to lead teams and deliver high-quality, full stack web
+solutions using modern frameworks like React and Django. Passionate about creating innovative solutions and
+always looking for the next challenge.</p></div>
 								</div>
 							</div>
 							<div class="row">
