--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@ always looking for the next challenge.</p></div>
 									<i class="icon-whatsapp"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="https://wa.me/6238426420">Whatsapp</a></p>
+									<p><a href="https://wa.me/+916238426420">Whatsapp</a></p>
 								</div>
 							</div>
 						</div>
